# another-image-editor

./: CMakeLists.txt  README.md
include/: Image.h  PluginLoader.h
include/effects/: IEffect.h  NegativeEffect.h  SepiaEffect.h
include/formats/: BMPFormat.h  IFormat.h
src/: CMakeLists.txt  Image.cpp  main.cpp
src/effects/: CMakeLists.txt  NegativeEffect.cpp  SepiaEffect.cpp
src/formats/: BMPFormat.cpp  CMakeLists.txt
